# dctech.events

./: .dockerignore  .gitignore  ADDRESS_NORMALIZATION.md  ADD_EVENTS.md  AGENTS.md  ARCHITECTURE.md  AWS_INTEGRATION.md  AmazonQ.md  CITIES.md  CLASSIFIER.md  CLAUDE.md  COPILOT_VALIDATION_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_RUNBOOK.md  DYNAMODB-SOURCE-OF-TRUTH.md  EVENT_TRACKING.md  HEADER_IMAGES.md  IMPLEMENTATION_STATUS.md  INFRASTRUCTURE.md  JOB_21601724551_FAILURE_INVESTIGATION.md  MICROBLOG_CONFIGURATION.md  MICROPUB_FIX.md  MIGRATION.md  MULTI_SITE_CONFIG_SUMMARY.md  Makefile  Makefile.serverless  NEXT_STEPS.md  OAUTH_SETUP.md  ORGANIZE_INTEGRATION.md  PRD.md  PR_VALIDATION.md  QUICKSTART.md  QUICK_REFERENCE.md  README-SERVERLESS.md  README-authenticated-views.md  README-changes.md  README-deployment.md  README-passwordless-auth.md  README.md  SERVERLESS-MIGRATION-SUMMARY.md  (+101 more)
.beads/: issues.jsonl
.github/: FUNDING.yml  copilot-instructions.md
_categories/: ai.yaml  apple-technologies.yaml  cloud.yaml  conferences.yaml  coworking.yaml  crypto.yaml  cybersecurity.yaml  (+17 more)
calgen/: pyproject.toml
calgen/src/calgen/: __init__.py  app.py  calendars.py  cli.py  event_utils.py  freeze.py  location_utils.py  pipeline.py  site_config.py
calgen/src/calgen/templates/: 404.html  approved_groups_list.html  base.html  categories_index.html  category_page.html  feeds.html  homepage.html  location_page.html  locations_index.html  month_page.html  newsletter.html  newsletter.txt  virtual_events.html  week_page.html
calgen/src/calgen/templates/partials/: events_by_day.html
(+848 files in other folders)
